--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "security-project",
+	"proxy": "http://localhost:80",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -7,12 +8,14 @@
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"@types/http-proxy-middleware": "^1.0.0",
 		"@types/jest": "^27.5.2",
 		"@types/node": "^16.18.46",
 		"@types/react": "^18.2.21",
 		"@types/react-dom": "^18.2.7",
 		"antd": "^5.8.5",
 		"axios": "^1.5.0",
+		"http-proxy-middleware": "^2.0.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.15.0",
