--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"antd": "^5.8.5",
 		"axios": "^1.5.0",
 		"http-proxy-middleware": "^2.0.6",
+		"jwt-decode": "^3.1.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.15.0",
